--- a/WebContent/header.html
+++ b/WebContent/header.html
@@ -8,18 +8,16 @@
 	<div class="container">
 		<div class="row">
 			<div class="12u">
-
 				<header id="header">
 					<h1><a href="#" id="logo">Riddhi Agrodairy Farms</a></h1>
 					<nav id="nav">
-						<a href="homeradf.html" class="current-page-item">Home</a>
+						<a href="index.html" class="current-page-item">Home</a>
 						<a href="products.html">Products</a>
 						<a href="blogs.html">Blogs</a>
 						<a href="sudyami.html">Sudyami</a>
 						<a href="contactus.html">Contact Us</a>
 					</nav>
 				</header>
-
 			</div>
 		</div>
 	</div>
