--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -22,7 +22,7 @@
 							<header id="header">
 								<h1><a href="#" id="logo">Riddhi Agrodairy Farms</a></h1>
 								<nav id="nav">
-									<a href="homeradf.html" class="current-page-item">Home&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+									<a href="index.html" class="current-page-item">Home&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
 									<a href="products.html">Products&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
 									<a href="blogs.html">Blogs&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
 									<a href="sudyami.html">Sudyami&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
