--- a/WebContent/products.html
+++ b/WebContent/products.html
@@ -20,9 +20,9 @@
 					<div class="row">
 						<div class="12u">
 							<header id="header">
-								<h1><a href="homeradf.html" id="logo">Riddhi Agrodairy Farms</a></h1>
+								<h1><a href="index.html" id="logo">Riddhi Agrodairy Farms</a></h1>
 								<nav id="nav">
-									<a href="homeradf.html">Home&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+									<a href="index.html">Home&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
 									<a href="products.html" class="current-page-item">Products&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
 									<a href="blogs.html">Blogs&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
 									<a href="sudyami.html">Sudyami&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
